--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# External files
+Fitness LIGNE 1.xlsx
+F-P-00286.pdf
+fp_database_design.xlsx
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
