--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # External files
-Fitness LIGNE 1.xlsx
-F-P-00286.pdf
-fp_database_design.xlsx
+*.xlsx
+*.pdf
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
